# create-fastapi

./: .gitignore  AGENT.md  README.md  llms.txt  pyproject.toml
docs/: prd-create-fastapi.md
src/create_fastapi/templates/: Dockerfile  Makefile  README.md  docker-compose.yml  dockerignore  env.example  pyproject.toml
src/create_fastapi/templates/alembic/: env.py
src/create_fastapi/templates/app/: celery_app.py  main.py
src/create_fastapi/templates/app/api/: deps.py
src/create_fastapi/templates/app/api/v1/: router.py
src/create_fastapi/templates/app/api/v1/admin/: router.py
src/create_fastapi/templates/app/api/v1/admin/endpoints/: __init__.py  health.py
src/create_fastapi/templates/app/api/v1/endpoints/: __init__.py  health.py
src/create_fastapi/templates/app/core/: __init__.py  config.py  constants.py  exceptions.py  redis.py  security.py
src/create_fastapi/templates/app/db/: __init__.py  base.py  session.py
src/create_fastapi/templates/app/models/: __init__.py  base.py
src/create_fastapi/templates/app/schemas/: __init__.py  common.py
src/create_fastapi/templates/app/schemas/admin/: __init__.py
src/create_fastapi/templates/app/schemas/user/: __init__.py
src/create_fastapi/templates/app/services/: example_service.py
src/create_fastapi/templates/app/tasks/: __init__.py  example.py
src/create_fastapi/templates/deploy/nginx/: {{ project_name }}.conf
src/create_fastapi/templates/deploy/supervisor/: {{ project_name }}.conf
src/create_fastapi/templates/tests/: conftest.py  test_health.py
tests/: test_generator.py
(+4 files in other folders)
