[project]
name = "{{ project_name }}"
version = "0.1.0"
description = "FastAPI 项目（由 create-fastapi 生成）。"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
{% if use_redis %}    "redis>=5.0",
{% endif %}{% if use_celery %}    "celery[redis]>=5.4",
{% endif %}]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "httpx>=0.28",
    "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
files = ["app", "alembic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
index-url = "https://mirrors.tencent.com/pypi/simple/"
